<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
        android:id="@+id/menu_add_event"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_add_event"
        />
	
	<item
        android:id="@+id/menu_refresh_events"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_refresh_events"
        />	
        
	<item
        android:id="@+id/menu_center_on_events"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_center_on_events"
        />		
        
	<item
        android:id="@+id/menu_list_events"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_list_events"
        />		
	    
    <item
        android:id="@+id/menu_satelite"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_satelite"
        />

	<item
        android:id="@+id/menu_normal"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_normal"
        />
        
	<item
        android:id="@+id/menu_hybrid"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_hybrid"
        />
</menu>